# fling

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  build.sh  main.cpp  prime.txt  std.fling  test_array.fling  test_operators.fling  testcode.txt  while.test
cpp/: util.hpp
cpp/frontend/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
cpp/runtime/: envirments.cpp  envirments.hpp  interpreter.cpp  interpreter.hpp  values.hpp
cpp/runtime/eval/: expressions.cpp  expressions.hpp
cpp/rustffi/: ffi.cpp  ffi.hpp
flingr/: Cargo.toml  build.rs  test.txt
flingr/cpp/: ffi.cpp  ffi.hpp  util.cpp
flingr/cpp/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp
flingr/cpp/runtime/: envirments.cpp  envirments.hpp  interpreter.cpp  interpreter.hpp  values.hpp
flingr/cpp/runtime/eval/: expressions.cpp  statements.hpp
flingr/cpp/rustffi/: ffi.cpp  ffi.hpp
flingr/src/: bridge.rs  main.rs
src/: bridge.rs  main.cpp  main.rs  util.hpp
src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.cpp~RF2ce1b4af.TMP  parser.hpp
src/runtime/: envirments.cpp  envirments.cpp~RF85ff3d93.TMP  envirments.hpp  interpreter.cpp  interpreter.hpp  values.hpp
src/runtime/eval/: expressions.cpp  expressions.hpp  statements.cpp  statements.hpp
